# SHA-256-GUI

./: .gitattributes  README.md  test_file.txt
SHA-256-GUI/: .gitattributes  Cargo.toml  README.md  TESTING.md
src/: main.rs
ui/: ui.slint
