[package]
name = "sha256_gui"
version = "0.1.8"
edition = "2021"
build = "build.rs"

description = "A simple SHA-256 GUI tool built with Slint."
license = "MIT"
repository = "https://github.com/bensantora/SHA-256-GUI"

[dependencies]
slint = "1.14"
sha2 = "0.10"

[build-dependencies]
slint-build = "1.14"
